--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <p>
                         and this what I can <span>Do</span>
                     </p>
-                    <button><a download="Faisal-qashmr cv" href="./Cream Brown Simple Web Developer CV_20231116_224148_0000.pdf">DOWNLOAD CV</a></button>
+                    <button><a download="Faisal-qashmr cv" href="./CV.pdf">DOWNLOAD CV</a></button>
                 </div>
                 <div class="img-hero">
                     <div class="fq-could">
